Started V25 conversion. Updated version to V25. Updated maven plugins. Restructured pom, using parent (not sure if I keep it this way). Started json conversion, not yet compilable